discovery/acls.txt
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-dc86f3a4",
                    "NetworkAclId": "acl-c20f5ba5",
                    "SubnetId": "subnet-13792c74"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-db86f3a3",
                    "NetworkAclId": "acl-c20f5ba5",
                    "SubnetId": "subnet-21a4c27a"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-c20f5ba5",
            "Tags": [],
            "VpcId": "vpc-c159d8a6",
            "OwnerId": "738685627511"
        }
    ]
}
